--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT=3000
-DATABASE_URL="mongodb+srv://hb509650:narendrarajput@cluster0.hdo3hdd.mongodb.net/myAuth"
-JWT_SECRET=narendrarajput
+DATABASE_URL=""
+JWT_SECRET=
